...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewMyRequestBtn"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="218dp"
        android:layout_marginLeft="218dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="16dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewAddItemBtn"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="278dp"
...
